<?xml version="1.0" encoding="utf-8"?>
<merge
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
            android:id="@+id/main_view"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/logo_image_view"
                    android:layout_width="240dp"
                    android:layout_height="128dp"
                    android:layout_marginTop="56dp"
                    android:src="@drawable/ic_launcher_background"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/app_name" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppTheme.TextInputLayout.OutlinedBox"
                    app:layout_constraintTop_toBottomOf="@id/logo_image_view"
                    android:layout_marginTop="48dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:maxLines="1"
                        android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppTheme.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:passwordToggleEnabled="true"
                    app:layout_constraintTop_toBottomOf="@id/user_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:imeOptions="actionDone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    style="@style/Widget.AppTheme.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="64dp"
                    android:text="@string/enter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_input_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loading_view"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loading_animation"
                android:layout_width="186dp"
                android:layout_height="186dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:layout_constraintVertical_chainStyle="packed"
                app:lottie_fileName="dog_animation.json"
                app:lottie_loop="true"
                app:lottie_autoPlay="true" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/loading_text"/>

        <TextView
                android:id="@+id/loading_text"
                android:text="@string/loading"
                android:textSize="20sp"
                android:fontFamily="@font/montserratbold"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/loading_animation" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/loading_quotes"/>

        <TextView
                android:id="@+id/loading_quotes"
                android:textSize="14sp"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/colorPrimary"
                android:text="@string/loading_quotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/loading_text" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp" android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</merge>