<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        android:elevation="4dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_margin="8dp"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/service_type"
                android:text="@string/service_type"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/colorGrayLevel2"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/service_type_text"
                android:textSize="20sp"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorGrayLevel1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/service_type"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

        <TextView
                android:id="@+id/duration"
                android:text="@string/duration"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/colorGrayLevel2"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/service_type_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/duration_text"
                android:textSize="20sp"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorGrayLevel1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/duration"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

        <TextView
                android:id="@+id/price"
                android:text="@string/paid_value"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/colorGrayLevel2"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/duration_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/price_text"
                android:textSize="20sp"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorGrayLevel1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/price"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

        <TextView
                android:id="@+id/owner"
                android:text="@string/service_owner"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/colorGrayLevel2"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/price_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/owner_text"
                android:textSize="20sp"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorGrayLevel1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/owner"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

        <TextView
                android:id="@+id/products"
                android:text="@string/products"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/colorGrayLevel2"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/owner_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/products_text"
                android:textSize="20sp"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorGrayLevel1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/products"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

        <TextView
                android:id="@+id/annotations"
                android:text="@string/annotations"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/colorGrayLevel2"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/products_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/annotations_text"
                android:textSize="20sp"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorGrayLevel1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/annotations"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"/>

        <Space
                android:id="@+id/bottom_space"
                app:layout_constraintTop_toBottomOf="@+id/annotations_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content" android:layout_height="16dp"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>