<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/pet_name"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp"
                android:layout_width="0dp"
                android:fontFamily="@font/montserratbold"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp"/>

        <TextView
                android:id="@+id/pet_type"
                android:text="@string/type"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/colorGrayLevel2"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/pet_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/pet_type_text"
                android:textSize="20sp"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorGrayLevel1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/pet_type"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

        <TextView
                android:id="@+id/pet_gait"
                android:visibility="gone"
                android:text="@string/gait"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/colorGrayLevel2"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/pet_type_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/pet_gait_text"
                android:visibility="gone"
                android:textSize="20sp"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorGrayLevel1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/pet_gait"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

        <TextView
                android:id="@+id/pet_allergies"
                android:visibility="gone"
                android:text="@string/allergies"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/colorGrayLevel2"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/pet_gait_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/pet_allergies_text"
                android:visibility="gone"
                android:textSize="20sp"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorGrayLevel1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/pet_allergies"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

        <TextView
                android:id="@+id/pet_habits"
                android:visibility="gone"
                android:text="@string/habits"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/colorGrayLevel2"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/pet_allergies_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/pet_habits_text"
                android:visibility="gone"
                android:textSize="20sp"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorGrayLevel1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/pet_habits"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

        <TextView
                android:id="@+id/pet_preferences"
                android:visibility="gone"
                android:text="@string/preferences"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/colorGrayLevel2"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/pet_habits_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/pet_preferences_text"
                android:visibility="gone"
                android:textSize="20sp"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorGrayLevel1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/pet_preferences"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>