<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <!-- content -->
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:visibility="gone"
            tools:listitem="@layout/holder_pet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <!-- loading -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loading_view"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loading_animation"
                android:layout_width="186dp"
                app:layout_constraintVertical_chainStyle="packed"
                android:layout_height="186dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:lottie_fileName="dog_animation_running.json"
                app:lottie_loop="true"
                app:lottie_autoPlay="true" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/loading_text"/>

        <TextView
                android:id="@+id/loading_text"
                android:text="@string/loading"
                android:textSize="20sp"
                android:fontFamily="@font/montserratbold"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/loading_animation" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- try again -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/try_again_view"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/try_again_animation"
                android:layout_width="186dp"
                android:layout_height="186dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:lottie_fileName="wifi.json"
                app:lottie_loop="true"
                app:layout_constraintVertical_chainStyle="packed"
                app:lottie_autoPlay="true"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/try_again_text"/>

        <TextView
                android:id="@+id/try_again_text"
                android:text="@string/try_again_message"
                android:textSize="18sp"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/try_again_animation"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/try_again_button"/>

        <Button
                android:id="@+id/try_again_button"
                android:text="@string/try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/try_again_text" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- empty view -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/empty_view"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/empty_view_animation"
                android:layout_width="186dp"
                android:layout_height="186dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:lottie_fileName="sad.json"
                app:lottie_loop="true"
                app:layout_constraintVertical_chainStyle="packed"
                app:lottie_autoPlay="true"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/empty_view_text"/>

        <TextView
                android:id="@+id/empty_view_text"
                android:text="@string/empty_message_pets"
                android:textSize="18sp"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/colorPrimary"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/empty_view_animation" android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>